--- a/Home-Pagina/Home.css
+++ b/Home-Pagina/Home.css
@@ -2,9 +2,6 @@ header{
     text-align:center;
 }
 
-img#logo{
-    width:600px;
-}
 
 body{
     background-image: url('websiteBackground.jpg');
@@ -17,13 +14,13 @@ ul{
     margin: 0px;
 }
 
-li{
+container{
     background-color: #808080;
     padding-left: 20px;
     border-top: 1px solid white;
 }
 
-li a{
+nav a{
     color: #fbebeb;
     text-decoration: none;
     font-weight: 700;
