--- a/Home-Pagina/portofolio.css
+++ b/Home-Pagina/portofolio.css
@@ -25,6 +25,11 @@ body{
     letter-spacing: 4px;
     font-weight: 100;
 }
+.box h3{
+    font-size: 30px;
+    letter-spacing: 2px;
+    font-weight: 100;
+}
 .box h5{
     font-size: 20px;
     letter-spacing: 3px;
@@ -33,4 +38,5 @@ body{
 .box p{
     text-align: justify;
 }
+
 
