iets nieuws aan het proberen

--- a/Home-Pagina/portfolio.css
+++ b/Home-Pagina/portfolio.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    background: url(AchtergondeNieuwePortofolio.jpg);
+    background: url(space%20kopie.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
